--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <div class="container">
 
     <h1>Privacy Policy</h1>
-    <div class="updated">Last updated: [Add date]</div>
+    <div class="updated">Last updated: 4 Jan 2026</div>
 
     <h2>1. Introduction</h2>
     <p>
@@ -236,7 +236,7 @@
     </p>
 
     <footer>
-        © [Year] Sub Manage Hub. All rights reserved.
+        © 2026 Sub Manage Hub. All rights reserved.
     </footer>
 
 </div>
