--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Privacy Policy - Sub Manage Hub</title>
+    <title>Privacy Policy - Subscription Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -60,7 +60,7 @@
 
     <h2>1. Introduction</h2>
     <p>
-        Sub Manage Hub (“we”, “our”, “the app”) is an internal, admin-only mobile
+        Subscription Manager (“we”, “our”, “the app”) is an internal, admin-only mobile
         application designed to help businesses record, manage, and monitor subscription
         sales and users.
     </p>
@@ -232,11 +232,11 @@
     </p>
     <p>
         <strong>Email:</strong> dnishu970@gmail.com <br>
-        <strong>App Name:</strong> Sub Manage Hub
+        <strong>App Name:</strong> Subscription Manager
     </p>
 
     <footer>
-        © 2026 Sub Manage Hub. All rights reserved.
+        © 2026 Subscription Manager. All rights reserved.
     </footer>
 
 </div>
